Bug 577316, add preference to allow form elements to be focused when clicked, r=smaug